WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226616
stopMakingViewBlankDueToLackOfRenderingUpdate logging shows even if we never made the view blank
https://bugs.webkit.org/show_bug.cgi?id=226616
Summary
stopMakingViewBlankDueToLackOfRenderingUpdate logging shows even if we never ...
Chris Dumez
Reported
2021-06-03 17:59:16 PDT
stopMakingViewBlankDueToLackOfRenderingUpdate logging shows even if we never made the view blank, this is confusing.
Attachments
Patch
(3.18 KB, patch)
2021-06-03 18:00 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(4.55 KB, patch)
2021-06-03 18:03 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-06-03 18:00:48 PDT
Created
attachment 430523
[details]
Patch
Chris Dumez
Comment 2
2021-06-03 18:03:37 PDT
Created
attachment 430524
[details]
Patch
EWS
Comment 3
2021-06-03 18:53:38 PDT
Committed
r278442
(
238462@main
): <
https://commits.webkit.org/238462@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430524
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-06-03 18:54:20 PDT
<
rdar://problem/78848845
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug