stopMakingViewBlankDueToLackOfRenderingUpdate logging shows even if we never made the view blank https://bugs.webkit.org/show_bug.cgi?id=226616

Reviewed by Tim Horton.

stopMakingViewBlankDueToLackOfRenderingUpdate logging was showing even if we never made the view blank.
This was confusing so this fix makes the logging conditional.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didUpdateRenderingAfterCommittingLoad):
(WebKit::WebPageProxy::stopMakingViewBlankDueToLackOfRenderingUpdate):
(WebKit::WebPageProxy::makeViewBlankIfUnpaintedSinceLastLoadCommit):
* UIProcess/WebPageProxy.h:


Canonical link: https://commits.webkit.org/238462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278442 268f45cc-cd09-0410-ab3c-d52691b4dbfc